--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "browser-sync": "^2.12.8",
     "browserify": "^11.0.1",
     "del": "^1.2.0",
-    "lesshat": "^4.1.0",
+    "documentjs": "^0.4.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-changed": "^1.2.1",
@@ -41,6 +41,7 @@
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.5",
     "imagemin-pngquant": "^4.2.2",
+    "lesshat": "^4.1.0",
     "steal": "^0.16.17",
     "vinyl-source-stream": "^1.1.0"
   },
