--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^1.12.0",
     "gulp-less": "^3.1.0",
+    "gulp-lesshint": "^3.0.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
     "gulp-notify": "^2.2.0",
