--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "new-project-template",
-  "version": "2.1.0",
-  "description": "A simple static website project template",
-  "main": "gulpfile.js",
+  "version": "3.1.0",
+  "description": "A complete static project template for large scale web applications",
+  "main": "builds/dev/js/app.js",
+  "scripts": {
+    "build": "node steal-build.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/fed-v/new-project-template.git"
@@ -41,11 +44,19 @@
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.3.5",
     "imagemin-pngquant": "^4.2.2",
+    "jquery": "^3.2.1",
     "lesshat": "^4.1.0",
-    "steal": "^0.16.17",
+    "steal": "^0.16.44",
+    "steal-stache": "^3.0.5",
+    "steal-tools": "^1.3.1",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "gulp-svgmin": "^1.2.2"
+  },
+  "steal": {
+    "plugins": [
+      "steal-stache"
+    ]
   }
 }
