--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jquery": "^3.2.1",
     "lesshat": "^4.1.0",
     "steal": "^0.16.44",
+    "steal-less": "^1.2.0",
     "steal-stache": "^3.0.5",
     "steal-tools": "^1.3.1",
     "vinyl-source-stream": "^1.1.0"
@@ -56,6 +57,7 @@
   },
   "steal": {
     "plugins": [
+      "steal-less",
       "steal-stache"
     ]
   }
