--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "browser-sync": "^2.12.8",
     "browserify": "^11.0.1",
     "del": "^1.2.0",
+    "google-maps": "^3.2.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-changed": "^1.2.1",
@@ -50,6 +51,7 @@
     "steal-less": "^1.2.0",
     "steal-stache": "^3.0.5",
     "steal-tools": "^1.3.1",
+    "svg4everybody": "^2.1.8",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
