--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "imagemin-pngquant": "^4.2.2",
     "jquery": "^3.2.1",
     "lesshat": "^4.1.0",
+    "retinajs": "^2.1.1",
     "steal": "^0.16.44",
     "steal-less": "^1.2.0",
     "steal-stache": "^3.0.5",
@@ -61,6 +62,7 @@
     "plugins": [
       "steal-less",
       "steal-stache"
-    ]
+    ],
+    "bundle": []
   }
 }
