--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "browser-sync": "^2.12.8",
     "browserify": "^11.0.1",
+    "chai": "^4.0.1",
     "del": "^1.2.0",
     "google-maps": "^3.2.1",
     "gulp": "^3.9.1",
@@ -37,6 +38,7 @@
     "gulp-lesshint": "^3.0.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
+    "gulp-mocha": "^4.3.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
@@ -47,6 +49,7 @@
     "imagemin-pngquant": "^4.2.2",
     "jquery": "^3.2.1",
     "lesshat": "^4.1.0",
+    "mocha": "^3.4.2",
     "retinajs": "^2.1.1",
     "steal": "^0.16.44",
     "steal-less": "^1.2.0",
