FINALLY got stealjs working correctly. Made some small other small adjustments

--- a/package.json
+++ b/package.json
@@ -66,6 +66,9 @@
       "steal-less",
       "steal-stache"
     ],
-    "bundle": []
+    "bundle": [
+      "builds/dev/components/map/map",
+      "builds/dev/components/bottom-cta/bottom-cta"
+    ]
   }
 }
