--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
   "devDependencies": {
     "browser-sync": "^2.12.8",
     "browserify": "^11.0.1",
-    "chai": "^4.0.1",
+    "chai": "^4.1.2",
     "del": "^1.2.0",
     "google-maps": "^3.2.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-changed": "^1.2.1",
     "gulp-imagemin": "^2.4.0",
+    "gulp-istanbul": "^1.1.2",
     "gulp-jshint": "^1.12.0",
     "gulp-less": "^3.1.0",
     "gulp-lesshint": "^3.0.0",
