--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lesshat": "^4.1.0",
     "mocha": "^3.4.2",
     "retinajs": "^2.1.1",
+    "sinon": "^4.1.2",
     "slick-carousel": "^1.8.1",
     "steal": "^0.16.44",
     "steal-less": "^1.2.0",
@@ -72,7 +73,8 @@
       "builds/dev/components/map/map",
       "builds/dev/components/bottom-cta/bottom-cta",
       "builds/dev/components/icon-carousel/icon-carousel",
-      "builds/dev/components/feature-carousel/feature-carousel"
+      "builds/dev/components/feature-carousel/feature-carousel",
+      "builds/dev/components/testimonials-carousel/testimonials-carousel"
     ]
   }
 }
